--- a/test_v3.ipynb
+++ b/test_v3.ipynb
@@ -4,24 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing queries: 100%|██████████| 119456/119456 [00:00<00:00, 647564.34it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "132963\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from src.preprocessor.utils.dataset_level import read_pickle, prepare_training_dataset, read_json\n",
+    "from src.preprocessor.utils.dataset_level import read_pickle, prepare_training_dataset_with_triplet, read_json\n",
     "from itertools import islice\n",
     "\n",
     "corpus = read_pickle('/home/thiendc/projects/legal_retrieval/data/processed/corpus.pkl')\n",
@@ -30,97 +15,101 @@
     "queries = read_pickle('/home/thiendc/projects/legal_retrieval/data/processed/queries.pkl')\n",
     "# queries = dict(sorted(queries.items(), key=lambda item: item[1])[:1000])\n",
     "\n",
-    "relevant_docs = read_pickle('/home/thiendc/projects/legal_retrieval/data/processed/relevant_docs.pkl')\n",
-    "relevant_docs = dict(sorted(\n",
-    "    (item for item in relevant_docs.items() if item[0] in queries),\n",
-    "    key=lambda item: item[0]\n",
-    "))\n",
+    "relevant_docs = read_pickle('/home/thiendc/projects/legal_retrieval/data/processed/relevant_docs.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing queries: 100%|██████████| 10000/10000 [00:00<00:00, 36231.57it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "532 5909 10000 10000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "selected_queries = dict(sorted(queries.items(), key=lambda item: item[1])[:10000])\n",
     "\n",
-    "train_dataset = prepare_training_dataset(queries, corpus, relevant_docs)\n",
-    "print(len(train_dataset))"
+    "# Lọc corpus và relevant_docs dựa trên selected_queries\n",
+    "selected_corpus = {i: corpus[i] for i in selected_queries.keys() if i in corpus}\n",
+    "selected_relevant_docs = {i: relevant_docs[i] for i in selected_queries.keys() if i in relevant_docs}\n",
+    "\n",
+    "# Chuẩn bị dataset cho training\n",
+    "train_dataset = prepare_training_dataset_with_triplet(selected_queries, selected_corpus, selected_relevant_docs)\n",
+    "print(len(train_dataset), len(selected_corpus), len(selected_queries), len(selected_relevant_docs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing queries: 100%|██████████| 1000/1000 [00:00<00:00, 671518.41it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 596 1000 1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "u_selected_queries = dict(sorted(queries.items(), key=lambda item: item[1])[-1000:])\n",
+    "\n",
+    "# Lọc corpus và relevant_docs dựa trên selected_queries\n",
+    "u_selected_corpus = {i: corpus[i] for i in u_selected_queries.keys() if i in corpus}\n",
+    "u_selected_relevant_docs = {i: relevant_docs[i] for i in u_selected_queries.keys() if i in relevant_docs}\n",
+    "\n",
+    "# Chuẩn bị dataset cho training\n",
+    "val_dataset = prepare_training_dataset_with_triplet(u_selected_queries, u_selected_corpus, u_selected_relevant_docs)\n",
+    "print(len(val_dataset), len(u_selected_corpus), len(u_selected_queries), len(u_selected_relevant_docs))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import Dataset\n",
-    "train_dataset = Dataset.from_dict(train_dataset[:10000])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added 6461 new tokens to the vocabulary\n"
+      "Added 13295 new tokens to the vocabulary\n"
      ]
     }
    ],
    "source": [
-    "# from sentence_transformers import SentenceTransformer, models\n",
-    "# from transformers import AutoTokenizer, AutoModel\n",
-    "# import os\n",
-    "\n",
-    "# def setup_embedding_model(model_name, new_tokens=None):\n",
-    "#     \"\"\"\n",
-    "#     Set up a sentence transformer model with proper tokenizer handling\n",
-    "    \n",
-    "#     Args:\n",
-    "#         model_name (str): HuggingFace model name/path\n",
-    "#         new_tokens (list): Optional list of new tokens to add to vocabulary\n",
-    "    \n",
-    "#     Returns:\n",
-    "#         SentenceTransformer: Properly configured sentence transformer model\n",
-    "#     \"\"\"\n",
-    "    \n",
-    "#     # Set up tokenizer and model in SentenceTransformer\n",
-    "#     word_embedding_model = models.Transformer(model_name)\n",
-    "#     tokenizer = word_embedding_model.tokenizer\n",
-    "    \n",
-    "#     # Add new tokens if provided\n",
-    "#     if new_tokens is not None:\n",
-    "#         tokenizer.add_tokens(new_tokens, special_tokens=False)\n",
-    "#         word_embedding_model.auto_model.resize_token_embeddings(len(tokenizer))\n",
-    "    \n",
-    "#     # Create the SentenceTransformer model with the word embedding model\n",
-    "#     sentence_model = SentenceTransformer(modules=[word_embedding_model])\n",
-    "    \n",
-    "#     return sentence_model\n",
-    "\n",
-    "# # Load new tokens and setup model\n",
-    "# new_tokens = read_json('./src/preprocessor/vocab/data/update_vocab_v1.json') \n",
-    "# tokenizer = AutoTokenizer.from_pretrained('intfloat/e5-base-v2')\n",
-    "# tokenizer.add_tokens(new_tokens, special_tokens=False)\n",
-    "\n",
-    "# # 2. Create the base model\n",
-    "# base_model = AutoModel.from_pretrained('intfloat/e5-base-v2')\n",
-    "# base_model.resize_token_embeddings(len(tokenizer))\n",
-    "\n",
-    "# # 3. Create word embedding model using sentence-transformers format\n",
-    "# word_embedding_model = models.Transformer(\n",
-    "#     model_name_or_path='intfloat/e5-base-v2',\n",
-    "#     tokenizer_name_or_path='intfloat/e5-base-v2'\n",
-    "# )\n",
-    "\n",
-    "# # 4. Create pooling model\n",
-    "# pooling_model = models.Pooling(\n",
-    "#     word_embedding_model.get_word_embedding_dimension(),\n",
-    "#     pooling_mode_mean_tokens=True,\n",
-    "#     pooling_mode_cls_token=False,\n",
-    "#     pooling_mode_max_tokens=False\n",
-    "# )\n",
-    "\n",
-    "# # 5. Create the full SentenceTransformer model\n",
-    "# model = SentenceTransformer(modules=[word_embedding_model, pooling_model])\n",
-    "# # Now you can use model directly in SentenceTransformerTrainer\n",
-    "\n",
     "from sentence_transformers import SentenceTransformer, models\n",
     "from transformers import AutoTokenizer, AutoModel\n",
     "\n",
@@ -136,7 +125,7 @@
     "        SentenceTransformer: Properly configured sentence transformer model\n",
     "    \"\"\"\n",
     "    # Set up word embedding model\n",
-    "    word_embedding_model = models.Transformer(model_name)\n",
+    "    word_embedding_model = models.Transformer(model_name, max_seq_length= 512)\n",
     "    tokenizer = word_embedding_model.tokenizer\n",
     "    \n",
     "    # Add new tokens if provided\n",
@@ -164,13 +153,36 @@
     "new_tokens = read_json('./src/preprocessor/vocab/data/update_vocab_v2.json')\n",
     "\n",
     "# 2. Setup model với vocab mới\n",
-    "model, _ = setup_embedding_model('VoVanPhuc/sup-SimCSE-VietNamese-phobert-base', new_tokens= new_tokens)\n",
+    "model, _ = setup_embedding_model('intfloat/multilingual-e5-small', new_tokens= new_tokens)\n",
     "# model = SentenceTransformer(\"intfloat/multilingual-e5-small\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "512"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sentence_transformers import SentenceTransformer, models\n",
+    "from transformers import AutoTokenizer, AutoModel\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"dangvantuan/vietnamese-embedding\", trust_remote_code = True)\n",
+    "tokenizer.model_max_length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,14 +193,14 @@
     "from sentence_transformers.util import cos_sim as consine\n",
     "\n",
     "\n",
-    "matryoshka_dimensions = [768, 512, 256] # Important: large to small\n",
+    "matryoshka_dimensions = [384, 256, 128] # Important: large to small\n",
     "matryoshka_evaluators = []\n",
     "# Iterate over the different dimensions\n",
     "for dim in matryoshka_dimensions:\n",
     "    ir_evaluator = InformationRetrievalEvaluator(\n",
-    "        queries=queries,\n",
-    "        corpus=corpus,\n",
-    "        relevant_docs=relevant_docs,\n",
+    "        queries=u_selected_queries,\n",
+    "        corpus=u_selected_corpus,\n",
+    "        relevant_docs=u_selected_relevant_docs,\n",
     "        name=f\"dim_{dim}\",\n",
     "        truncate_dim=dim,  # Truncate the embeddings to a certain dimension\n",
     "        score_functions={\"cosine\": consine},\n",
@@ -208,11 +220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from sentence_transformers.losses import MatryoshkaLoss, MultipleNegativesRankingLoss\n",
     "\n",
     "inner_train_loss = MultipleNegativesRankingLoss(model)\n",
@@ -223,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -267,25 +278,26 @@
     "\n",
     "# Training arguments\n",
     "args = SentenceTransformerTrainingArguments(\n",
-    "    output_dir=\"legal_finetuning_v2\",\n",
-    "    num_train_epochs = 4,\n",
+    "    output_dir=\"legal_finetuning_v4\",\n",
+    "    num_train_epochs = 8,\n",
     "    per_device_train_batch_size= 4,  # Giảm batch size             \n",
-    "    gradient_accumulation_steps= 8,  # Tăng gradient accumulation            \n",
+    "    gradient_accumulation_steps= 4,  # Tăng gradient accumulation            \n",
     "    per_device_eval_batch_size= 8,\n",
     "    gradient_checkpointing=True,\n",
     "    warmup_ratio = 0.1,\n",
-    "    learning_rate= 2e-5,\n",
+    "    learning_rate= 3e-5,\n",
     "    lr_scheduler_type=\"cosine\",\n",
     "    optim=\"adamw_torch_fused\",\n",
     "    fp16=True,\n",
     "    batch_sampler=BatchSamplers.NO_DUPLICATES,\n",
     "    eval_strategy=\"steps\",\n",
-    "    save_steps= 100,\n",
-    "    logging_steps = 50,\n",
+    "    save_steps= 32,\n",
+    "    logging_steps = 8,\n",
     "    save_total_limit = 5,\n",
     "    load_best_model_at_end=True,\n",
-    "    max_grad_norm = 0.1,\n",
+    "    max_grad_norm = 0.5,\n",
     "    metric_for_best_model=\"eval_dim_768_cosine_ndcg@10\",\n",
+    "    # resume_from_checkpoint = \"./legal_finetuning_v2/checkpoint-128\",\n",
     "    ddp_find_unused_parameters=False,\n",
     "    dataloader_num_workers = 40\n",
     ")\n",
@@ -295,6 +307,7 @@
     "    model=model,\n",
     "    args=args,\n",
     "    train_dataset=train_dataset,\n",
+    "    eval_dataset= val_dataset,\n",
     "    loss=train_loss,\n",
     "    evaluator=evaluator,\n",
     ")\n",
@@ -344,96 +357,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m The `run_name` is currently set to the same value as `TrainingArguments.output_dir`. If this was not intended, please specify a different run name by setting the `TrainingArguments.run_name` parameter.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend. Please refer to https://wandb.me/wandb-core for more information.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mthiendc3005\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eaba6cc285184354b0af2edee5f87164",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.01111282083309359, max=1.0)…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.18.5"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/home/thiendc/projects/legal_retrieval/wandb/run-20241104_091159-5zwni0jn</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/thiendc3005/sentence-transformers/runs/5zwni0jn' target=\"_blank\">legal_finetuning_v2</a></strong> to <a href='https://wandb.ai/thiendc3005/sentence-transformers' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/thiendc3005/sentence-transformers' target=\"_blank\">https://wandb.ai/thiendc3005/sentence-transformers</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/thiendc3005/sentence-transformers/runs/5zwni0jn' target=\"_blank\">https://wandb.ai/thiendc3005/sentence-transformers/runs/5zwni0jn</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "data": {
       "text/html": [
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='14' max='312' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 14/312 44:08 < 18:15:59, 0.00 it/s, Epoch 0.17/4]\n",
+       "      <progress value='5' max='64' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 5/64 05:19 < 1:44:53, 0.01 it/s, Epoch 0.47/8]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -457,8 +387,8 @@
    ],
    "source": [
     "# Training với memory tracking\n",
-    "# with track_memory():\n",
-    "trainer.train()\n",
+    "with track_memory():\n",
+    "    trainer.train()\n",
     "\n",
     "# Dọn memory sau khi training xong\n",
     "# gc.collect()\n",
@@ -467,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -483,12 +413,40 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "588905a06ed849c6bdf96afe7df4e99d",
+       "model_id": "4ba651845e09481e817e38cf40147ab0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "model.safetensors:   0%|          | 0.00/559M [00:00<?, ?B/s]"
+       "Computing widget examples:   0%|          | 0/1 [00:00<?, ?example/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fdf352e40db5492a896c1888f5b1ec6f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Computing widget examples:   0%|          | 0/1 [00:00<?, ?example/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9fa4dc3a2c78483fb2c271308f8d741f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/560M [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -497,18 +455,18 @@
     {
      "data": {
       "text/plain": [
-       "'https://huggingface.co/Tnt3o5/test_embedding_model/commit/a6177571d2c5535081604dbd0f8326683b8604f0'"
+       "'https://huggingface.co/Tnt3o5/sup_legal_phbert_triplet/commit/9f15d5377c19897d7d359f7dbedf037ab08b14c9'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# from huggingface_hub import login\n",
-    "# login(token=\"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\", add_to_git_credential=True)\n",
-    "# trainer.model.push_to_hub(\"test_embedding_model_v2\")\n"
+    "from huggingface_hub import login\n",
+    "login(token=\"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\", add_to_git_credential=True)\n",
+    "trainer.model.push_to_hub(\"sup_legal_phbert_triplet\")\n"
    ]
   }
  ],
